# market-master-trading-action-prediction

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dashboard  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt
.github/workflows/: ci.yml
dashboard/: README.md  requirements.prod.txt  streamlit_app.py
data/raw/: sample_ohlcv.csv
docs/: docker_setup.md
flows/: enhanced_orchestration.py  index_signal.py
src/: api.py  compare_predictions.py  data.py  data_fetch_nvda.py  features.py  fetch_components.py  fetch_symbol.py  fetch_weights_qqq.py  gate_and_report.py  hourly_predict.py  infer.py  log_inference.py  model_candidates.py  model_serving.py  monitor_drift.py  predict_index.py  predict_with_model.py  registry.py  run_pipeline.py  train.py  train_compare.py  train_pooled_compare.py
tests/: conftest.py  test_api.py  test_features.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_features.py  test_mlops.py  test_pipeline.py
